2015-01-18  Charlie Zender  <zender@uci.edu>

	* Clean-up rx code for LSD by DYW

2015-01-16  Charlie Zender  <zender@uci.edu>

	* Deprecate -D_BSD_SOURCE -D_POSIX_SOURCE in favor of -D_DEFAULT_SOURCE in configure

	* Fix nco_var_typ_trv() prototype for C++ compilers

2015-01-14  Charlie Zender  <zender@uci.edu>

	* LSD implementation in MM3 code compiles cleanly yet has problem finding traversal objects

	* Introduce nco_var_around() calls in MM3 write/copy code

	* Patch nco_mss_val_get() to avoid invalid free()---now	nco_var_around() can work

	* Regressions now fixed. Failures may have been due to excessive .tmp files in regression directory.

2015-01-12  Charlie Zender  <zender@uci.edu>

	* Do not call nco_var_around when lsd == NC_MAX_INT, ensure lsd always initialized

	* Implement multiple LSD options by Dingying Wei (DYW). Currently broken.

	* Improve ISO8601 functionality with nco_cln_sng_rbs()

2015-01-09  Charlie Zender  <zender@uci.edu>

	* Quiet CEWIs exposed by GCC 4.9.2

	* Verify recent (20150109+) netCDF library snapshots fix coordinate renaming problems yet break attribute renaming

	* Introduce -D_DEFAULT_SOURCE in place of deprecated (as of gcc 4.9.2) -D_BSD_SOURCE -D_POSIX_SOURCE
	Include -O optimization when OPTS=X to quiet warning messages
	Whether these Makefile changes introduce compile problems on older GCCs is TBD

	* Add --lbr, --library to ncap2 to facilitate link-path debugging

2015-01-08  Charlie Zender  <zender@uci.edu>

	* New ncecat regression test to verify concatentated coordinates do not gain new record dimension

	* Implement temporary fix for autoconf issues

	* Discovered that NCO autotools do not follow autoconf guidelines
	This only matters in practice for ncap2 which uses multiple additional libraries
	Incorrect usage of CPPFLAGS and friends can lead to wrong precedence in ncap2 linking
	Will be hard to fix correctly---thorough rewrite of configure.ac *.am required

2015-01-07  Charlie Zender  <zender@uci.edu>
